Release history for bevelbar

next
  [Added]
  - Support for displaying farbfeld images.

v16.06  2016-06-26
  [Changed]
  - Try to detect duplicated/cloned monitors.

v16.03  2016-03-13
  [Fixed]
  - Overlong bars no longer appear partially on the wrong monitor.

  [Changed]
  - "Inter segment spacing" is now "segment margin": Around a segment,
    there is both a horizontal and a vertical margin.
  - Both the size of the (new) segment margin and the size of empty
    segments are now measured in pixels (instead of depending on the
    font size).

v16.02  2016-02-01
  [Added]
  - Initial release.
  - Draw bars.
  - Manpage.